--- a/index.html
+++ b/index.html
@@ -27,27 +27,22 @@
     </div>
   </header>
 
-  <main class="wrap">
+<main class="wrap">
+  <section class="blurb">
+    <p>Welcome to my nostalgic digital journal…</p>
+  </section>
+</main>
 
-  <p class="handwritten">nostalgic vibes →</p>
-
-    <section class="hero" aria-label="Featured photo">
-      <img class="hero-img" src="bread3.png" alt="Main nostalgic photo" />
-      <p class="hero-caption">Laura • Martinez • Memories</p>
-    </section>
-
-    <div class="left-note">
-    What's new in my world? →
+<section class="hero" aria-label="Featured photo">
+  <div class="plate-wrap">
+    <img class="placemat" src="placemat2.png" alt="Placemat background">
+    <img class="plate" src="plate.png" alt="Plate background">
+    <img class="hero-img" src="bread3.png" alt="Main nostalgic photo" />
+    <img class="fork" src="fork.png" alt="Fork on the left">
+    <img class="knife" src="knife.png" alt="Knife on the right">
   </div>
-</div>
-
-    <section class="blurb">
-      <p>Welcome to my nostalgic digital journal. Explore comfort media, playlists, and photo moments. This site is a place for me to share the little things that bring me joy and help me hold onto memories. Take a look around, and maybe you’ll find something that resonates with you too.</p>
-    </section>
-
-  
-
-  </main>
+  <p class="hero-caption">Laura • Martinez • Memories</p>
+</section>
 
 <section class="filmstrip" aria-label="Highlights">
   <div class="strip wrap">
@@ -69,8 +64,9 @@
 
   <footer class="site-footer">
     <div class="wrap">
-      <small>© 2025 LMNOPages</small>
+      <small>© 2025 LMNOPages • Crafted with nostalgia at ASU</small>
     </div>
   </footer>
 </body>
 </html>
+
