--- a/index.html
+++ b/index.html
@@ -29,20 +29,29 @@
 
 <main class="wrap">
   <section class="blurb">
-    <p>Welcome to my nostalgic digital journal…</p>
+   
   </section>
 </main>
 
 <section class="hero" aria-label="Featured photo">
   <div class="plate-wrap">
     <img class="placemat" src="placemat2.png" alt="Placemat background">
-    <img class="plate" src="plate.png" alt="Plate background">
+    <img class="plate" src="LMNOPages.png" alt="Plate background">
     <img class="hero-img" src="bread3.png" alt="Main nostalgic photo" />
     <img class="fork" src="fork.png" alt="Fork on the left">
     <img class="knife" src="knife.png" alt="Knife on the right">
   </div>
   <p class="hero-caption">Laura • Martinez • Memories</p>
 </section>
+
+<section class="blurb">
+  <p>
+    Welcome to my nostalgic digital journal. Explore comfort media, playlists, and photo moments.
+    This site is a place for me to share the little things that bring me joy and help me hold onto
+    memories. Take a look around, and maybe you'll find something that resonates with you too.
+  </p>
+</section>
+
 
 <section class="filmstrip" aria-label="Highlights">
   <div class="strip wrap">
@@ -69,3 +78,4 @@
   </footer>
 </body>
 </html>
+
