--- a/photos.html
+++ b/photos.html
@@ -44,7 +44,7 @@
     <div class="masonry">
 
       <figure class="m-item tilt-l wide">
-        <img src="Mexico.jpeg" alt="Mexico City" loading="lazy">
+        <img src="Mexico.jpeg" alt="Mexico City">
         <figcaption>OCT 2024. The best flea market in Mexico City</figcaption>
       </figure>
 
@@ -57,55 +57,55 @@
           preload="metadata"
           poster="my-video-poster.jpg">
         </video>
-        <figcaption>tiny film from the weekend</figcaption>
+        <figcaption>Tiny film from the weekend.</figcaption>
       </figure>
 
 
       <figure class="m-item">
-        <img src="turkeyleg.jpeg" alt="Turkey leg" loading="lazy">
+        <img src="turkeyleg.jpeg" alt="Turkey leg">
         <figcaption>Eating a turkey leg at Disneyland!</figcaption>
       </figure>
 
    
       <figure class="m-item tilt-r tall">
-        <img src="oregon.JPG" alt="Oregon scenery" loading="lazy">
+        <img src="oregon.JPG" alt="Oregon scenery">
         <figcaption>I love Oregon</figcaption>
       </figure>
 
  
       <figure class="m-item wide">
-        <img src="twilight.JPG" alt="Twilight filming location" loading="lazy">
-        <figcaption>I'm Twilight's number one fan</figcaption>
+        <img src="twilight.JPG" alt="Twilight filming location">
+        <figcaption>I'm Twilight's number one fan!</figcaption>
       </figure>
 
 
       <figure class="m-item tilt-l">
-        <img src="22cake.JPG" alt="Cake of monkey" loading="lazy">
+        <img src="22cake.JPG" alt="Cake of monkey" >
         <figcaption>I TURNED 22!</figcaption>
       </figure>
 
 
       <figure class="m-item">
-        <img src="NY2.JPG" alt="Central Park" loading="lazy">
+        <img src="NY2.JPG" alt="Central Park" >
         <figcaption>I went to New York for the FIRST time!</figcaption>
       </figure>
 
 
       <figure class="m-item tilt-r">
-        <img src="mercury.jpeg" alt="PHX Arena" loading="lazy">
+        <img src="mercury.jpeg" alt="PHX Arena">
         <figcaption>Mighty Mercury!</figcaption>
       </figure>
 
 
       <figure class="m-item wide tilt-l">
-        <img src="candy.jpeg" alt="Fresh mochi" loading="lazy">
+        <img src="candy.jpeg" alt="Fresh mochi" >
         <figcaption>Fresh mochi from California!</figcaption>
       </figure>
 
  
       <figure class="m-item">
-        <img src="tacos.JPG" alt="tacos" loading="lazy">
-        <figcaption>The BEST tacos I have EVER had</figcaption>
+        <img src="tacos.JPG" alt="tacos" >
+        <figcaption>The BEST tacos I have EVER had!</figcaption>
       </figure>
     </div>
   </section>
