--- a/photos.html
+++ b/photos.html
@@ -45,7 +45,7 @@
 
       <figure class="m-item tilt-l wide">
         <img src="Mexico.jpeg" alt="Mexico City">
-        <figcaption>OCT 2024. The best flea market in Mexico City</figcaption>
+        <figcaption>The best flea market in Mexico City.</figcaption>
       </figure>
 
 
