--- a/index.html
+++ b/index.html
@@ -52,15 +52,16 @@
   </p>
 </section>
 
+<footer class="site-footer">
+  <div class="wrap">
+    <small>
+      © 2025 LMNOPages • Crafted with nostalgia at 
+      <a href="https://asu.edu" target="_blank" rel="noopener">ASU</a><br>
+      <a href="LMNOPage@email.com">Email me</a>
 
-
-
-
-  <footer class="site-footer">
-    <div class="wrap">
-      <small>© 2025 LMNOPages • Crafted with nostalgia at ASU</small>
-    </div>
-  </footer>
+    </small>
+  </div>
+</footer>
 </body>
 </html>
 
