--- a/contact.html
+++ b/contact.html
@@ -62,10 +62,15 @@
     </form>
   </main>
 
-  <footer class="site-footer">
-    <div class="wrap">
-      <small>© 2025 LMNOPages • Crafted with nostalgia at ASU</small>
-    </div>
-  </footer>
+<footer class="site-footer">
+  <div class="wrap">
+    <small>
+      © 2025 LMNOPages • Crafted with nostalgia at 
+      <a href="https://asu.edu" target="_blank" rel="noopener">ASU</a><br>
+      <a href="LMNOPage@email.com">Email me</a>
+
+    </small>
+  </div>
+</footer>
 </body>
 </html>
