--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   <meta name="description" content="LMNOPages — movies, music, memories." />
   <link rel="stylesheet" href="styles.css" />
 </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B0ZDFY7P1P"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-B0ZDFY7P1P');
+</script>
 
 <body>
   <header class="site-header">
