--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,16 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B0ZDFY7P1P"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-B0ZDFY7P1P');
+</script>
+
 <body>
   <!-- Header -->
   <header class="site-header">
