--- a/about.html
+++ b/about.html
@@ -7,6 +7,15 @@
   <meta name="description" content="Meet Laura — a Phoenix-based student sharing hobbies, favorites, and memories on LMNOPages." />
   <link rel="stylesheet" href="styles.css">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B0ZDFY7P1P"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-B0ZDFY7P1P');
+</script>
 
 <body>
 
