--- a/photos.html
+++ b/photos.html
@@ -60,11 +60,11 @@
 
       <figure class="m-item wide tilt-l">
         <video
-          src="my-movie2.MP4"
+          src="my-movie2.mp4"
           controls
           playsinline
           preload="metadata"
-          poster="my-video-poster.jpg">
+          poster="my-video-poster.JPG">
         </video>
         <figcaption>Tiny film from the weekend.</figcaption>
       </figure>
