--- a/music.html
+++ b/music.html
@@ -42,7 +42,7 @@
       <p>
         Music has always been one of my favorite things. There’s literally a song for every mood,
         every season, every version of me. Whether I need comfort, motivation, or just some
-        background noise while I journal or crochet, music always shows up. I love how it’s timeless tool,
+        background noise while I journal or crochet, music always shows up. I love how it’s a timeless tool,
         songs from decades ago can still be equally impactful today. What we listen to says so much about
         who we are, and I think that’s what makes music so special.
       </p>
