--- a/photos.html
+++ b/photos.html
@@ -89,7 +89,7 @@
 
 
       <figure class="m-item tilt-l">
-        <img src="22cake.JPG" alt="Cake of monkey" >
+        <img src="22cake.jpg" alt="Cake of monkey" >
         <figcaption>I TURNED 22!</figcaption>
       </figure>
 
